chop by category desc are working as links, shop by category card fixed on tablet + on mobile

--- a/src/pages/HomePage/sections/ShopByCategory/ShopByCategory.scss
+++ b/src/pages/HomePage/sections/ShopByCategory/ShopByCategory.scss
@@ -15,20 +15,36 @@
     height: 368px;
 
     @include onPhone {
+      flex-direction: column;
       align-items: center;
       gap: 24px;
       flex-wrap: wrap;
       height: min-content;
     }
 
+    @include onTablet {
+      height: min-content;
+      gap: 24px;
+      justify-content: space-between;
+
+      & > * {
+        flex-basis: 33.3%;
+      }
+    }
+
     @include onDesktop-small {
-      height: 368px;
+      height: min-content;
+      gap: 24px;
+      justify-content: space-between;
+
+      & > * {
+        flex-basis: 33.3%;
+      }
     }
 
     @include onDesktop {
       height: min-content;
     }
-
   }
 
   &__card {
@@ -76,11 +92,16 @@
     overflow: hidden;
 
     @include onPhone {
-      max-height: 250px;
+      max-height: 350px;
+      min-width: 350px;
     }
 
-    @include fromOnTablet {
-      max-height: 100%;
+    @include onTablet {
+      max-height: 280px;
+    }
+
+    @include onDesktop-small {
+      max-height: 300px;
     }
 
     &__image {
